# git-task-cli

./: Cargo.toml  README.md
.github/workflows/: build.yaml
src/: cli.rs  config.rs  git.rs  github.rs  inputs.rs  main.rs  utils.rs
