[package]
name = "git-task-cli"
version = "0.1.0"
edition = "2024"

[profile.release]
# Maximum optimization level
opt-level = 3
# Enable link-time optimization
lto = true
# Enable code generation units - decreases compile time but may affect optimization
codegen-units = 1
# Strip debug symbols
strip = true
# Optimize for size
panic = "abort"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
colored = "3.0.0"
dialoguer = "0.11.0"
dirs = "6.0.0"
git2 = "0.20.2"
octocrab = "0.44.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
